sandbox/output
HikerTest.java:37: error: cannot find symbol
        int actual = Hikcer.answer("10,20,30,40");
                     ^
  symbol:   variable Hikcer
  location: class HikerTest
1 error
